--- a/app/src/main/res/layout/activity_stops.xml
+++ b/app/src/main/res/layout/activity_stops.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.youngbro.mytransitlive.Stops">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginBottom="50dp">
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.youngbro.mytransitlive.Stops"
+    xmlns:android="http://schemas.android.com/apk/res/android">
         <include
             layout="@layout/app_bar_main"/>
 
@@ -35,13 +29,4 @@
                 android:id="@+id/bus" />
         </android.support.v4.widget.SwipeRefreshLayout>
 
-    </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/adViewContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        />
-
-
-</FrameLayout>
+</LinearLayout>
