--- a/app/src/main/res/layout/fragment_near_by_stops.xml
+++ b/app/src/main/res/layout/fragment_near_by_stops.xml
@@ -15,16 +15,11 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/swiperefresh"
-        android:layout_marginBottom="50dp">
+        android:id="@+id/swiperefresh">
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/aroundYou" />
     </android.support.v4.widget.SwipeRefreshLayout>
-    <RelativeLayout
-        android:id="@+id/adViewContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"/>
+
 </FrameLayout>
